fixed align

--- a/src/styles/instructions_modal.scss
+++ b/src/styles/instructions_modal.scss
@@ -79,13 +79,13 @@ strong {
 }
 
 #key-img{
-  height: 70px;
-  width: 100px;
+  height: 80px;
+  width: 116px;
   margin-top: 8px;
 }
 
 #space-img {
-  height: 48px;
-  width: 110px;
+  height: 46px;
+  width: 116px;
   margin-top: 4px;
 }
